--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, fugiat quasi omnis officia quae saepe! Id delectus ex accusantium nam consequuntur error maiores, deserunt eius culpa et ratione voluptatum fugiat!</p>
                     </div>
                     <div class="content">
-                        2
+                        <a href=""><p>Lorem  voluptatum fugiat!</p></a>
+
                     </div>
                 </div>
                 <div class="actualiter-container" id="content2">
