--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <header id="scroll-to"></header>
     <div id="scroll-wheel-under-cover"><div class=""></div></div>
     <div id="scroll-wheel"></div>
+
+    <div id="social-media">
+        <a href=""><i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+    </div>
     <nav>
         <img src="estusmba-removebg-preview.png" alt="">
         <div id="search-bar">
@@ -32,27 +40,19 @@
         <article >
             <main>
                 <div class="slider">
-                    <img src="" alt="">
-                    <div class="description">1</div>
-                </div>
-                <div class="slider">
-                    <img src="" alt="">
-                    <div class="description">2</div>
-                </div>
-                <div class="slider">
-                    <img src="" alt="">
-                    <div class="description">3</div>
+                    <img src="IMG-20241016-WA0020.jpg" alt="">
+                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit labore perferendis in maiores ullam asperiores sequi, quos rerum similique, quidem iure doloribus deleniti, quae mollitia laborum sunt qui odit.</div>
                 </div>
             </main>
             <aside>
                 <span id="far">NEWS!!!</span>
                 <div class="news">
-                    <img src="" alt="">
-                    <div class="description">1</div>
+                    <img src="ROSETTA2025GENE.jpeg" alt="">
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, aut esse! </div>
                 </div>
                 <div class="news">
-                    <img src="" alt="">
-                    <div class="description">1</div>
+                    <img src="ROSETTA2025GENE.jpeg" alt="">
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, aut esse! </div>
                 </div>
             </aside>
         </article>
@@ -60,28 +60,46 @@
         <div id="espace-etudiant">
             <div id="espace-title">ESPACE ETUDIANT:</div>
             <div id="espace-e-container">
-                <div class="content">1</div>
-                <div class="content">2</div>
-                <div class="content">3</div>
-                <div class="content">4</div>
-                <div class="content">5</div>
-                <div class="content">6</div>
+                <div class="content" id="mtu">
+                    <a href=""><img src="mtu.png" alt=""></a>
+                </div>
+               
+                <div class="content" id="time">
+                   <a href=""><img src="emploi.png" alt="" ></a>
+
+                </div>
+                <div class="content" id="moodle">
+                    <a href=""><img src="moodl.png" alt=""></a>
+                    
+
+                </div>
+                <div class="content" id="roseta">
+                    <a href=""><img src="roseta.svg" alt=""></a>
+
+                </div>
+                <div class="content" id="gmail">
+                    <a href=""><img src="email.png" alt=""></a>
+                </div>
+                <div class="content" id="concours">
+                    <a href=""><img src="Concours-removebg-preview.png" alt=""></a>
+
+                </div>
             </div>
         </div>
 
         <section>
             <main>
                 <div id="actualiter-titles">
-                    <button class="title" id="title1">tittttt</button>
-                    <button class="title" id="title2">tittttt</button>
-                    <button class="title" id="title3">tittttt</button>
+                    <button class="title" id="title1">AVE AUX ETUDIANTS</button>
+                    <button class="title" id="title2">RECRETEMENT</button>
+                    <button class="title" id="title3">APPEL D'OFFRE</button>
                 </div>
                 <div class="actualiter-container" id="content1">
                     <div class="content">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, fugiat quasi omnis officia quae saepe! Id delectus ex accusantium nam consequuntur error maiores, deserunt eius culpa et ratione voluptatum fugiat!</p>
+                        <a href="">hello this is the ev </a>
                     </div>
                     <div class="content">
-                        <a href=""><p>Lorem  voluptatum fugiat!</p></a>
+                        <a href="">  voluptatum fugiat!</a>
 
                     </div>
                 </div>
